add: main entry point

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "MIT",
 	"author": "Kabir Goel",
 	"type": "module",
+	"main": "dist/index.js",
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
