--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte-french-toast",
+	"name": "@ratiu5/svelte-french-toast",
 	"version": "1.2.0",
 	"description": "Buttery smooth Svelte toasts. Lightweight, customizable, and beautiful by default.",
 	"keywords": [
@@ -15,7 +15,6 @@
 	"license": "MIT",
 	"author": "Kabir Goel",
 	"type": "module",
-	"main": "dist/index.js",
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
